--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,9 +19,16 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: xvfb-run npx playwright test
-    - uses: actions/upload-artifact@v4
+    - name: Upload Playwright HTML report  
+      uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+    - name: Upload Playwright test-results
+      uses: actions/upload-artifact@v4
+      if: failure()  
+      with:
+          name: playwright-screenshots
+          path: test-results/ 
