--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,5 +24,7 @@ jobs:
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
-        path: playwright-report/
+        path: |
+           playwright-report/
+           test-results/
         retention-days: 30
