--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,5 +1,7 @@
 name: Playwright Tests
 on:
+  schedule:
+    - cron: '30 14 * * 1,5'  # Runs at 2:30 PM UTC every Monday and Friday
   push:
     branches: [ main, master ]
   pull_request:
