--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,6 +19,10 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Print CPU count
+      run: |
+        echo "Logical CPUs: $(nproc --all)"
+        echo "Playwright default workers = $(node -e \"console.log(require('os').cpus().length/2)\")" 
     - name: Run Playwright tests
       run: xvfb-run npx playwright test
     - name: Upload Playwright HTML report  
