--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         echo "Logical CPUs: $(nproc --all)"
     - name: Run Playwright tests
-      run: xvfb-run npx playwright test
+      run: run npx playwright test
     - name: Upload Playwright HTML report  
       uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
